--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^16.11.6",
     "sass": "^1.43.4",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
